# cuda-code

./: README.md
01_hello_cuda/: 03eventRecordTime.cu
01_hello_cuda/include/: common.cuh
02_organization_thread_model/: 01_grid2D_block2D.cu  02_grid2D_block1D.cu  03_grid1D_block1D.cu  04_matrix_sum.cu  README.md
03_cuda_memory_model/: README.md
03_cuda_memory_model/constant_memory/constant_memory_demo01/: CMakeLists.txt  common.cuh  constant_memory.cu
03_cuda_memory_model/constant_memory/stencil_1d_constant_read_only/: stencil_1d_constant_read_only.cu
03_cuda_memory_model/global_memory/global_memory_demo02/: CMakeLists.txt  global_variable.cu
03_cuda_memory_model/global_memory/static_global_memory_demo01/: CMakeLists.txt  common.cuh  static_global_memory.cu
03_cuda_memory_model/memory_access/AoS/: AoS.cu  (+1 more)
03_cuda_memory_model/pine_memory/: CMakeLists.txt  pine_memory.cu
04_cuda_stream/: README.md
04_cuda_stream/stream/: stream.cu  stream_asyncAPI.cu  stream_block.cu  stream_call_back.cu  stream_dependence.cu  stream_multi_add_breadth.cu  stream_multi_add_depth.cu  stream_omp.cu  stream_resource.cu
05_optimize_in_GPU/elementwise/: README.md  elementwise_add.cu
05_optimize_in_GPU/gemm/: README.md  sgemm_naive.cu  sgemm_v1.cu
05_optimize_in_GPU/reduce/: Makefile  README.md  reduce_v0_baseline.cu  reduce_v1_no_divergence_branch.cu  reduce_v2_no_bank_conflict.cu  reduce_v3_add_during_load.cu  reduce_v4_unroll_last_warp.cu  reduce_v5_completely_unroll.cu  reduce_v6_multi_add.cu  reduce_v7_shuffle.cu
easy/: 02matrixSum1D_device.cu  04cudacoresCount.cu
(+22 files in other folders)
